--- a/css/style.css
+++ b/css/style.css
@@ -531,7 +531,7 @@ h1{
   }
   .nav__links.open{
     display:flex;                /* включаем flex */
-    max-height: 500px;
+    transform:translateY(0);
     opacity:1;
     pointer-events:auto;
   }
@@ -570,5 +570,6 @@ h1{
     grid-template-columns:1fr;
   }
 }
+
 
 
