--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,13 @@ h1{
    gap:16px; 
    align-items:center;
 }
+.footer__logo {
+   display: block;
+   justify-content: center;
+   align-items: center;
+   margin-right: 10px;
+   padding-right: 10px;
+}
 .footer__brand{
    display:flex; 
    gap:10px; 
@@ -471,6 +478,8 @@ h1{
    display:flex; 
    gap:10px; 
    flex-wrap:wrap;
+   margin-right: 10px;
+   padding-right: 10px;
 }
 .footer__nav a{
    padding:.3rem .6rem; 
@@ -491,7 +500,7 @@ h1{
    position:fixed; 
    right:18px; 
    bottom:18px; 
-   display:flex; 
+   display:inline; 
    flex-direction:column; 
    gap:10px; 
    z-index:60;
@@ -570,6 +579,7 @@ h1{
     grid-template-columns:1fr;
   }
 }
+
 
 
 
