--- a/css/style.css
+++ b/css/style.css
@@ -483,8 +483,6 @@ h1{
    display:flex; 
    gap:10px; 
    flex-wrap:wrap;
-   margin-right: 10px;
-   padding-right: 10px;
 }
 .footer__nav a{
    padding:.3rem .6rem; 
@@ -517,13 +515,13 @@ h1{
    width:52px; 
    height:52px; 
    border-radius:14px; 
-   background:var(--bg-soft); 
+   background: rgba(0, 0, 0, 0.225);  
    border:1px solid var(--stroke); 
    box-shadow:var(--shadow); 
    font-weight:800;
 }
 .fab__btn--accent{
-   background:var(--accent-2); 
+   background: rgba(0, 0, 0, 0.225);  
    color:#08110d;
 }
 
@@ -584,6 +582,7 @@ h1{
     grid-template-columns:1fr;
   }
 }
+
 
 
 
