--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ html,body{
    height:100%
 }
 body{
-  margin:0;
+  margin:0 auto;
   font: 16px/1.6 system-ui, -apple-system, "Segoe UI", Roboto, Inter, "Noto Sans", "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji";
   color:var(--text); 
   background:linear-gradient(180deg, var(--bg) 0%, var(--bg-soft) 100%);
@@ -138,6 +138,7 @@ a{
 }
 
 .nav__burger{
+   display:none; 
    width:42px; 
    height:42px; 
    border:1px solid var(--stroke); 
@@ -164,7 +165,7 @@ a{
    margin-bottom: 30px;
 }
 .hero__grid{
-  display:flex; 
+  display: block; 
   grid-template-columns: 1.05fr .95fr; 
   gap: clamp(16px, 4vw, 48px); 
   align-items:center;
@@ -188,14 +189,21 @@ h1{
    display:flex; 
    gap:1rem; 
    padding:0; 
-   margin:18px 0 0; 
+   margin:0 18px 0 18px; 
    list-style:none; 
    color:var(--text-dim);
 }
 .hero__stats li{
-   padding:.5rem .8rem; 
+   display: block;
+   padding:.5rem .8rem;
    border:1px dashed var(--stroke); 
    border-radius:12px;
+   width: 145px;
+   text-align: center;
+   margin-bottom: 10px;
+}
+.hero__strong {
+   display: block;
 }
 
 .hero__media{
@@ -224,7 +232,7 @@ h1{
 
 /* ========== Секции ========== */
 .section{
-   padding: clamp(48px, 7vw, 96px) 0;
+   padding: clamp(28px, 7vw, 26px) 0;
 }
 .section--muted{
    background: linear-gradient(180deg, var(--muted), transparent);
@@ -297,11 +305,12 @@ h1{
    border-radius:12px;
 }
 .quote{
-   margin:28px 0 0; 
-   padding:22px; 
-   border:1px dashed var(--stroke); 
-   border-radius:16px; 
-   color:var(--text-dim);
+   text-align: center;
+   margin: 28px 0 0; 
+   padding: 22px; 
+   border: 1px dashed var(--stroke); 
+   border-radius: 16px; 
+   color: var(--text-dim);
 }
 
 /* Галерея */
@@ -515,13 +524,13 @@ h1{
    width:52px; 
    height:52px; 
    border-radius:14px; 
-   background: rgba(0, 0, 0, 0.225);  
+   background: rgba(0, 0, 0, 0.225); 
    border:1px solid var(--stroke); 
    box-shadow:var(--shadow); 
    font-weight:800;
 }
 .fab__btn--accent{
-   background: rgba(0, 0, 0, 0.225);  
+   background:rgba(0, 0, 0, 0.225); 
    color:#08110d;
 }
 
@@ -582,13 +591,3 @@ h1{
     grid-template-columns:1fr;
   }
 }
-
-
-
-
-
-
-
-
-
-
